# training

./: Lesons.py  main.py  pyproject.toml
app/config/: __init__.py
app/models/: dataset.py
app/models/residual_block/: upscale.py
app/noise/: __init__.py  colors.py  noises.py
app/parser/: akspic.py  dowload.py  dowload_images.py  forkwallpapers.py  hdqwalls.py  wallpaperscraft.py
app/residual_block/: resnet.py  test.py  training.py  upscale.py
app/utils/: consolegui.py
