[project]
name = "training-model"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.13.3",
  "bs4>=0.0.2",
  "lxml>=6.0.2",
  "numpy<2",
  "opencv-python>=4.11.0.86",
  "pytorch-ssim>=0.1",
  "requests>=2.32.5",
  "scikit-image>=0.26.0",
  "selenium>=4.40.0",
  "torch",
  "torchvision",
  "tqdm>=4.67.3",
]

[tool.uv.sources]
torch = { path = "torch-2.7.0a0+git3f903c3-cp312-cp312-win_amd64.whl" }
torchvision = { path = "torchvision-0.22.0+9eb57cd-cp312-cp312-win_amd64.whl" }

